added nav for mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <a class="text-3xl text-black font-extrabold">Hockey<span class="text-[#FF4240]">’</span>s</a>
                 </div>
                 <div class="navbar-end">
-                  <a class="btn bg-[#FF4240] text-white font-semibold text-xl mr-2">Get Ticket</a>
+                  <a class="p-2 rounded-lg bg-[#FF4240] text-white font-semibold text-xl mr-2">Get Ticket</a>
                 </div>
               </div>
         </nav>
