--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hockeys</title>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,400&display=swap" rel="stylesheet">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- tailwind and daisy ui -->
@@ -26,6 +30,9 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+        body{
+            font-family: 'Poppins', sans-serif;
         }
       </style>
 </head>
@@ -181,30 +188,30 @@
                 <figure><img class="" src="Images/2.png" alt="" /></figure>
                 <div class=" z-20  lg:z-20 p-8 flex flex-col justify-end">
                  <h2 class="text-[28px] font-extrabold text-white lg:mb-8">Junior Program</h2>
-                  <p class="text-base font-medium text-white mb-4 lg:mb-8 ">Junior program: cultivating young potential, building character; a transformative journey where passion meets guidance, shaping future achievers with dedication and mentorship.</p>
-                    <button class="btn bg-[#FF4240] hover:bg-blue-600 border-none text-white w-[180px] lg:w-[180px]">Register Now!</button>
+                  <p class="text-base font-medium text-[#e1dee0] mb-4 lg:mb-8 ">Junior program: cultivating young potential, building character; a transformative journey where passion meets guidance, shaping future achievers with dedication and mentorship.</p>
+                    <button class="btn bg-[#FF4240] hover:bg-blue-600 border-none text-[#e1dee0] w-[180px] lg:w-[180px]">Register Now!</button>
                 </div>
             </div>
             <div class="card bg-base-100 shadow-xl image-full mb-5">
                 <figure><img class="" src="Images/3.png" alt="" /></figure>
                 <div class=" z-20  lg:z-20 p-8 flex flex-col justify-end">
                  <h2 class="text-[28px] font-extrabold text-white lg:mb-8">Teenager Program</h2>
-                  <p class="text-base font-medium text-white mb-4 lg:mb-8">
+                  <p class="text-base font-medium text-[#e1dee0] mb-4 lg:mb-8">
                     Teenager program: nurturing potential, fostering growth, instilling resilience; a dynamic environment where adolescents discover and harness their capabilities for success.</p>
                   <div class="card-actions">
-                    <button class="btn bg-[#FF4240] hover:bg-blue-600 border-none text-white w-[180px] lg:w-[180px]">Register Now!</button>
+                    <button class="btn bg-[#FF4240] hover:bg-blue-600 border-none text-[#e1dee0] w-[180px] lg:w-[180px]">Register Now!</button>
                   </div>
                 </div>
             </div>
             <div class="card bg-base-100 shadow-xl image-full col-span-2 mb-5 lg:-mt-5"> 
                 <figure><img class="" src="Images/4.png" alt="" /></figure>
                 <div class=" z-20  lg:z-20 p-8 flex flex-col justify-end">
-                 <h2 class="text-[28px] font-extrabold text-white lg:mb-8">professional
+                 <h2 class="text-[28px] font-extrabold text-white lg:mb-8">Professional
                      Program</h2>
-                  <p class="text-base font-medium text-white mb-4 lg:mb-8">
+                  <p class="text-base font-medium text-[#e1dee0] mb-4 lg:mb-8">
                     Professional program: Advanced training, expert guidance, strategic <br> development; sculpting elite talents, fostering leadership, <br> ensuring success in the competitive landscape.</p>
                   <div class="card-actions">
-                    <button class="btn bg-[#FF4240] hover:bg-blue-600 border-none text-white w-[180px] lg:w-[180px]">Register Now!</button>
+                    <button class="btn bg-[#FF4240] hover:bg-blue-600 border-none text-[#e1dee0] w-[180px] lg:w-[180px]">Register Now!</button>
                   </div>
                 </div>
             </div>
@@ -219,7 +226,7 @@
              </div>
      <div class="grid lg:grid-cols-2 gap-4">
         <!-- 1st card -->
-        <div class="hero  bg-zinc-100 rounded-2xl ">
+        <div class="hero  bg-[#F8F8FE] rounded-2xl ">
             <div class="hero-content flex-col lg:flex-row ">
               <img src="Images/5.png" class="max-w-sm rounded-lg " />
               <div>
@@ -254,7 +261,7 @@
             </div>
         </div>
         <!-- 2nd card -->
-        <div class="hero  bg-zinc-100 rounded-2xl ">
+        <div class="hero bg-[#F8F8FE] rounded-2xl ">
             <div class="hero-content flex-col lg:flex-row ">
               <img src="Images/6.png" class="max-w-sm rounded-lg " />
               <div>
@@ -289,7 +296,7 @@
             </div>
         </div>
         <!-- 3rd card -->
-        <div class="hero  bg-zinc-100 rounded-2xl ">
+        <div class="hero  bg-[#F8F8FE] rounded-2xl ">
             <div class="hero-content flex-col lg:flex-row ">
               <img src="Images/7.png" class="max-w-sm rounded-lg " />
               <div>
@@ -324,7 +331,7 @@
             </div>
         </div>
         <!-- 4th card -->
-        <div class="hero  bg-zinc-100 rounded-2xl ">
+        <div class="hero  bg-[#F8F8FE] rounded-2xl ">
             <div class="hero-content flex-col lg:flex-row ">
               <img src="Images/8.png" class="max-w-sm rounded-lg " />
               <div>
@@ -359,7 +366,7 @@
             </div>
         </div>
         <!-- 5th card -->
-        <div class="hero  bg-zinc-100 rounded-2xl ">
+        <div class="hero  bg-[#F8F8FE] rounded-2xl ">
             <div class="hero-content flex-col lg:flex-row ">
               <img src="Images/9.png" class="max-w-sm rounded-lg " />
               <div>
@@ -394,7 +401,7 @@
             </div>
         </div>
         <!-- 6th card -->
-        <div class="hero  bg-zinc-100 rounded-2xl ">
+        <div class="hero  bg-[#F8F8FE] rounded-2xl ">
             <div class="hero-content flex-col lg:flex-row ">
               <img src="Images/10.png" class="max-w-sm rounded-lg " />
               <div>
@@ -437,11 +444,11 @@
          <p class="pt-3 text-[#131318]">"Explore FAQs: Find quick answers to common inquiries about <br> our products and services on our website.</p>
     </div>
   <div class="md:flex md:space-x-10 lg:flex items-center gap-5   ">
-      <div class="mb-6">
+      <div class="">
         <img class="lg:h-[540px] lg:mt-6" src="Images/11.png" alt="">
       </div>
         <div class=" lg:flex flex-col lg:w-[60%] ">
-            <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+            <div class="collapse collapse-plus lg:pt-3 pb-3">
                 <input type="radio" name="my-accordion-3"checked="checked" /> 
                 <div class="collapse-title text-xl font-medium">
                     How does your product stand out in the market?
@@ -451,7 +458,7 @@
                 </div>
               </div>
               <hr>
-              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+              <div class="collapse collapse-plus lg:pt-3 pb-3">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class=" collapse-title text-xl font-medium">
                     Can I customize my order to specific requirements?
@@ -461,7 +468,7 @@
                 </div>
               </div>
               <hr>
-              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+              <div class="collapse collapse-plus lg:pt-3 pb-3">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                     What warranty comes with your products?
@@ -471,7 +478,7 @@
                 </div>
               </div>
               <hr>
-              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+              <div class="collapse collapse-plus lg:pt-3 pb-3">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                     How do I track my order status?
@@ -481,7 +488,7 @@
                 </div>
               </div>
               <hr>
-              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+              <div class="collapse collapse-plus lg:pt-3 pb-3">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                     Are your products environmentally friendly and sustainable?
@@ -491,7 +498,7 @@
                 </div>
               </div>
               <hr>
-              <div class="collapse collapse-plus bg-base-200 lg:pt-3 pb-3">
+              <div class="collapse collapse-plus lg:pt-3 pb-3">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                     Are there bulk discounts for large orders?
