--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 <div class="bg-[#FFFCEF] p-10 lg:w-[370px] rounded-2xl">
                      <img class="mb-4" src="Images/Group 1171275318.png" alt="">
                      <p class="mb-2">Email :</p>
-                     <h3 class="text-[#131318] font-bold text-[18px]">nomanislamnishad@gmail.com</h3>
+                     <h3 class="text-[#131318] font-bold text-[18px]">noman@gmail.com</h3>
                 </div>
                 <div class="bg-[#EFF5FE] p-10 lg:w-[370px] rounded-2xl">
                      <img class="mb-4" src="Images/Group 1171275321.png" alt="">
