--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
             <div class="space-y-5 lg:mt-10">
                 <div class="bg-[#F8FDF0] p-10 lg:w-[370px] rounded-2xl">
                      <img class="mb-4" src="Images/Group 1171275317.png" alt="">
-                     <p class="mb-2">Phone Number :</p>
+                     <p class="mb-2">Mobile Number :</p>
                      <h3 class="text-[#131318] font-bold text-[18px]">(+62) 123-321-543</h3>
                 </div>
                 <div class="bg-[#FFFCEF] p-10 lg:w-[370px] rounded-2xl">
@@ -568,7 +568,7 @@
                           </label>
                          <label class="form-control w-full ">
                             <div class="label">
-                              <span class="label-text font-bold text-xl">Phone Number</span>
+                              <span class="label-text font-bold text-xl">Mobile Number</span>
                             </div>
                             <input type="text" placeholder="Type here" class="lg:pl-[80px] input input-bordered w-full " />
                           </label>
